<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ToggleButton
        android:id="@+id/morningToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/string_morning_off"
        android:textOn="@string/string_morning_on"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/noonToggle"
        />

    <ToggleButton
        android:id="@+id/noonToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/string_noon_off"
        android:textOn="@string/string_noon_on"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/nightToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/string_night_off"
        android:textOn="@string/string_night_on"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noonToggle"/>



</androidx.constraintlayout.widget.ConstraintLayout>